--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-slick": "^0.23.10",
     "antd": "^5.8.5",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
