--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-slick": "^0.23.10",
     "antd": "^5.8.5",
     "axios": "^1.6.2",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
